--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+apring.datasource.url=jdbc:h2:file:./db/database;AUTO_SERVER=TRUE  // endereço do banco
+spring.datasource.username=sa                                      //usuario
+spring.datasource.password=                                        // senha
+spring.datasource.driver-class-name=org.h2.Driver
 
+//Jpa
+spring.jpa.hibernate.ddl-auto=create-drop                          // cria e droppa a tabela
+spring.jpa.show-sql=true                                           //mostra todos comandos sql
+spring.jpa.properties.hibernate.format_sql=true                    //formata os comando sql
+logging.level.org.hibernate.type=trace                             //da outras informações a sql
